--- a/css/main.css
+++ b/css/main.css
@@ -441,11 +441,6 @@ img {
   color: var(--accent-color);
 }
 
-.menu-open-btn {
-  display: block;
-  margin-left: auto;
-}
-
 .mob-menu {
   position: fixed;
   z-index: 2;
@@ -461,13 +456,34 @@ img {
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
 .mob-menu .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: unset;
+      -ms-flex-align: unset;
+          align-items: unset;
+}
+.mob-menu__contacts {
+  margin-top: 50px;
+}
+
+.menu-open-btn {
   display: block;
+  margin-left: auto;
+  margin-bottom: 8.33px;
 }
 
 .menu-close-btn {
   display: block;
   margin-left: auto;
-  margin-bottom: 8.33px;
 }
 
 .mob-menu__item:not(:last-child) {
@@ -481,10 +497,6 @@ img {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--tittle-text-color);
-}
-
-.mob-menu__contacts {
-  margin-top: 306px;
 }
 
 .mob-menu__connect:not(:last-child) {
@@ -510,7 +522,6 @@ img {
 .mob-menu-soc {
   margin-top: 64px;
 }
-
 .mob-menu-soc__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -518,15 +529,20 @@ img {
 }
 
 .mob-menu-soc__item:not(:last-child) {
-  margin-right: 20px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  margin-right: 10px;
 }
 
 .mob-menu-soc__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+  padding-right: 10px;
 }
 
 .hero {
@@ -1086,10 +1102,14 @@ img {
 
 .send-icon {
   position: absolute;
-  right: 76px;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+}
+@media screen and (max-width: 480px) {
+  .send-icon {
+    right: 125px;
+  }
 }
 @media screen and (min-width: 480px) {
   .send-icon {
@@ -1171,8 +1191,8 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
   background-color: var(--primary-bg-color);
   border-radius: 4px;
   padding: 40px;
@@ -1180,6 +1200,25 @@ img {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 320px) {
+  .modal {
+    width: 400px;
+    min-height: 609px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    min-height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+    padding: 40px;
+  }
 }
 
 .modal-close {
@@ -1348,8 +1387,8 @@ img {
 
 .check-text {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.66;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   display: -webkit-box;
@@ -1377,6 +1416,19 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+@media screen and (max-width: 480px) {
+  .check-text {
+    max-width: 480px;
+    font-size: 11px;
+    line-height: 1.2;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .check-text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .check-icon {
