--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -223,11 +223,6 @@
   }
 }
 
-.menu-open-btn {
-  display: block;
-  margin-left: auto;
-}
-
 .mob-menu {
   position: fixed;
   z-index: 2;
@@ -243,17 +238,29 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
   .container {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    align-items: unset;
+    // overflow: auto;
   }
+  &__contacts {
+    margin-top: 50px;
+  }
+}
+
+.menu-open-btn {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 8.33px;
 }
 
 .menu-close-btn {
   display: block;
   margin-left: auto;
-  margin-bottom: 8.33px;
 }
-.mob-menu-list {
-}
+
 .mob-menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -265,13 +272,6 @@
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--tittle-text-color);
-}
-
-.current {
-}
-
-.mob-menu__contacts {
-  margin-top: 306px;
 }
 
 .mob-menu__connect:not(:last-child) {
@@ -294,36 +294,37 @@
   color: var(--primary-text-color);
 }
 
-.envelope-header-icon {
-}
-
-.phone-header-icon {
-}
-
 .mob-menu-soc {
   margin-top: 64px;
-}
-
-.mob-menu-soc__list {
-  display: flex;
-  // position: relative;
+  &__list {
+    display: flex;
+    // justify-content: space-between;
+  }
 }
 
 .mob-menu-soc__item:not(:last-child) {
-  margin-right: 20px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  margin-right: 10px;
 }
 
 .mob-menu-soc__link {
+  display: flex;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
-  // &::after:not(:last-child) {
+  padding-right: 10px;
+
+  // &::before {
   //   content: "";
   //   position: absolute;
-  //   display: flex;
-  //   // height: 22px;
+  //   display: block;
+  //   bottom: 0;
+  //   left: -20px;
+  //   top: 10px;
+  //   width: 22px;
+  //   height: 0px;
   //   border: 1px solid rgba(33, 33, 33, 0.2);
   //   transform: rotate(90deg);
   // }
