--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -27,9 +27,13 @@
 
 .send-icon {
   position: absolute;
-  right: 76px;
+  // right: 125px;
   top: 50%;
   transform: translateY(-50%);
+
+  @media screen and (max-width: 480px) {
+    right: 125px;
+  }
 
   @media screen and (min-width: 480px) {
     right: 156px;
